# supertonic

./: .gitignore  README.md  deploy-plugin.bat  deploy-plugin.ps1  install.bat  install.sh  start.bat  start.ps1  start.sh  test_all.sh
obsidian-plugin/: esbuild.config.mjs  main.js  manifest.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: main.ts  settings.ts
py/: api_server.py  check_gpu.py  helper.py  pyproject.toml  requirements.txt
